--- a/dashboard/templates/dashboard/review.html
+++ b/dashboard/templates/dashboard/review.html
@@ -114,7 +114,7 @@
     <div class="diving">
         <h2>Review</h2>
         <div class="blog-actions">
-            <a href="{% url 'dashboard:addblog' %}"><button class="add-blog-btn">Add Review</button></a>
+            <a href="{% url 'dashboard:addreview' %}"><button class="add-blog-btn">Add Review</button></a>
         </div>
     </div>
     {% if reviews %}
