--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -93,6 +93,12 @@
     #close-message:hover {
         background-color: #f8d9d9;
     }
+    @media (min-width: 700px) and (max-width: 1200px) {
+        .ft-bt{
+            display:none;
+        }
+        
+    }
     
     </style>
 
@@ -275,7 +281,7 @@
                 
             </div>
             <div>
-                <button class="bg-primary  text-black py-2 px-8 read ipad_min:hidden mobile:hidden ipad:hidden hover:bg-[#e98468]" id="uping">
+                <button class="bg-primary  text-black py-2 px-8 read ipad_min:hidden mobile:hidden ipad:hidden hover:bg-[#e98468] ft-bt" id="uping">
                     <a href="javascript:void(0)" class="text-xl ipad_min:text-lg mobile:text-lg">Book an appointment</a>
                 </button>
             </div>
