--- a/main/templates/consult.html
+++ b/main/templates/consult.html
@@ -4,6 +4,11 @@
 {% block content %}
 
 {% load static %}
+<style>
+@media (min-width: 1200px) and (max-width: 1350px) {
+
+}
+</style>
 
     
 
@@ -32,7 +37,7 @@
 
     <!-- grid starts here-->
     <section>
-        <div class="flex flex-wrap gap-8 font-montasorrat my-20 ipad_min:grid mobile:grid phone_max:grid animate__animated animate__pulse">
+        <div class="flex flex-wrap gap-8 font-montasorrat my-20 ipad_min:grid mobile:grid phone_max:grid ">
             <div class="clr p-8 w-[30%] ipad_min:w-full mobile:w-full phone_max:w-full ipad:w-[50%] a">
                 <img src="{% static 'image/couple-01 1.svg' %}" alt="">
                 <h1 class="font-semibold">Pre-Marital Counselling</h1>
