--- a/main/templates/blogs.html
+++ b/main/templates/blogs.html
@@ -39,14 +39,18 @@
    <section>
         
         <div class="flex flex-wrap gap-16 ipad_min:grid mobile:grid">
-            {% for blog in blogs %}
-            <div class=" w-[30%] font-montserrat ipad_min:w-full mobile:w-full phone_max:w-full ipad:w-[45%]">
-                <a href="{% url 'main:single' blog.pk %}"><img class="mb-4 transition-transform transform hover:scale-105" src="{{ blog.image.url }}" alt=""></a>
-                <a href="{% url 'main:single' blog.pk %}"><h1 class="font-semibold ">{{ blog.title }}</h1></a>
-                <a href="{% url 'main:single' blog.pk %}"><p class="my-4">{{blog.content|slice:":255" | safe}}</p></a>
-                <a href="{% url 'main:single' blog.pk %}"><h2>{{ blog.date }}</h2></a>
-            </div>
-            {% endfor %}
+            {% if blogs %}
+                {% for blog in blogs %}
+                <div class=" w-[30%] font-montserrat ipad_min:w-full mobile:w-full phone_max:w-full ipad:w-[45%]">
+                    <a href="{% url 'main:single' blog.pk %}"><img class="mb-4 transition-transform transform hover:scale-105" src="{{ blog.image.url }}" alt=""></a>
+                    <a href="{% url 'main:single' blog.pk %}"><h1 class="font-semibold ">{{ blog.title }}</h1></a>
+                    <a href="{% url 'main:single' blog.pk %}"><p class="my-4">{{blog.content|slice:":255" | safe}}</p></a>
+                    <a href="{% url 'main:single' blog.pk %}"><h2>{{ blog.date }}</h2></a>
+                </div>
+                {% endfor %}
+            {% else %}
+                <p>No blogs available.</p>
+            {% endif %}
         </div>
    </section>
    <!-- grid ends here -->
