--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -92,7 +92,14 @@
 
     #close-message:hover {
         background-color: #f8d9d9;
+
     }
+    @media (max-width: 900px) {
+        footer img{
+            height:1.5rem;
+        }
+    }
+
     @media (min-width: 700px) and (max-width: 1200px) {
         .ft-bt{
             display:none;
