--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -107,7 +107,7 @@
                 <a href="javascript:void(0)">Book an appointment</a>
             </button>
             <button class="w-full border border-black rounded-full my-6 py-2 font-medium hover:bg-black hover:text-primary hover:border-primary transition ease-in-outnp duration-75 hidden ipad_min:block mobile:block phone_max:block ipad:block">
-                <a href="{% url 'main:consult' %}">Consultation</a>
+                <a href="{% url 'main:consult' %}">Online Consultation</a>
             </button>
         </div>
         
