--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -254,7 +254,7 @@
                 <h1 class="text-primary text-3xl font-artifika ipad_min:hidden mobile:hidden ipad:hidden">Rema Devi</h1>
                 <div class="flex my-5 gap-5 ipad_min:hidden mobile:hidden ipad:hidden">
                     <img src="{% static 'image/instagram.svg' %}" alt="">
-                    <img src="{% static 'image/facebook.svg' %}" alt="">
+                    <a href="https://www.facebook.com/profile.php?id=61557549630309"> <img src="{% static 'image/facebook.svg' %}" alt=""></a>
                 </div>
             </div>
             <div>
@@ -296,7 +296,8 @@
                 <h1 class="text-primary underline font-montserrat text-xl ipad_min:text-base mobile:text-base">Social Media</h1>
                 <div class="flex my-5 gap-4 hover:text-primary ">
                     <img src="{% static 'image/instagram.svg' %}" alt="">
-                    <img src="{% static 'image/facebook.svg' %}" alt="">
+                    <a href="https://www.facebook.com/profile.php?id=61557549630309"> <img src="{% static 'image/facebook.svg' %}" alt=""></a>
+                   
                 </div>
             </div>
         </div>
