--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -106,9 +106,9 @@
             <button class="bg-primary rounded-full w-full py-2 font-medium hover:bg-black hover:text-primary transition ease-in-outnp duration-75 hidden ipad_min:block mobile:block phone_max:block ipad:block" id="respo">
                 <a href="javascript:void(0)">Book an appointment</a>
             </button>
-            <button class="w-full border border-black rounded-full my-6 py-2 font-medium hover:bg-black hover:text-primary hover:border-primary transition ease-in-outnp duration-75 hidden ipad_min:block mobile:block phone_max:block ipad:block">
+            <!-- <button class="w-full border border-black rounded-full my-6 py-2 font-medium hover:bg-black hover:text-primary hover:border-primary transition ease-in-outnp duration-75 hidden ipad_min:block mobile:block phone_max:block ipad:block">
                 <a href="{% url 'main:consult' %}">Online consultation is also available</a>
-            </button>
+            </button> -->
         </div>
         
     </section> 
