--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -89,7 +89,7 @@
             <div class="text-center ipad_min:text-left mobile:text-left animate__animated animate__fadeInUp">
                 <h1 class="font-montasorrat text-5xl my-6 ipad_min:text-xl ipad_min:my-0 mobile:text-xl mobile:my-0 phone_max:text-4xl">Find <span class="font-artifika">Peace of Mind</span> with</h1>
                 <h1 class="font-artifika text-5xl ipad_min:text-xl mobile:text-xl phone_max:text-4xl "> Professional Counselling <span class="font-montasorrat">Services</span></h1>
-                <p class="text-lg text-center my-6 ipad_min:text-base ipad_min:text-start mobile:text-base mobile:text-start">With more than 30 years of Teaching and Counselling, the Counsellor can assist you to solve problems , to overcome challenges and to  set and achieve goals to lead a happy life….</p>
+                <p class="text-lg text-center my-6 ipad_min:text-base ipad_min:text-start mobile:text-base mobile:text-start">With more than 30 years of Teaching and Counselling, the Counsellor Rema Devi can assist you to solve problems , to overcome challenges and to  set and achieve goals to lead a happy life….</p>
             </div>
             <div class="ipad_min:hidden mobile:hidden animate__animated animate__fadeInDown"><img src="{% static 'image/Union-1.svg' %}" alt=""></div>
         </div>
@@ -178,7 +178,7 @@
                 <h2 class="font-montserrat text-xl my-1 text-gray-600 ipad_min:text-lg mobile:text-lg">Counselling Psychologist</h2>
                 <p style="font-size:13.5px;">M.Sc (Psychology), M.Ed., School Counselling,<br> International Common Wealth P.G. Diploma,<br> M.Sc.Counselling & Family Therapy(IGNOU),<br> M.Phil (Counselling Psychology)</p>
                 <p class="font-montserrat text-lg my-8 ipad_min:text-sm mobile:text-sm">Welcome to New Disha Counselling Centre. With many years of teaching and Counselling in and Outside KERALA, I am here to help people to achieve their personal and professional goals…</p>
-                <p class="font-montserrat text-lg ipad_min:hidden mobile:hidden ">Started this counselling centre at home in 2014, and since then I have been providing professional and compassionate counselling services for individuals, couples, families, and groups. Here we do offer a range of counselling services, including pre-marital counselling, family counselling/therapy, child & adolescent counselling, school counselling, group counselling, awareness programs, motivational sessions, career guidance, teacher  development programmes, and grief therapy.</p>
+                <p class="font-montserrat text-lg ipad_min:hidden mobile:hidden ">Started this counselling centre at home in 2014, and since then I have been providing professional and compassionate counselling services for individuals, couples, families, and groups. Here we do offer a range of counselling services, including pre-marital counselling, family counselling/therapy, child & adolescent counselling, school counselling, group counselling, awareness programs, motivational sessions, career guidance, teacher  development programmes, and grief therapy.Online consultation is also available. </p>
                 <div class="flex gap-12 my-8">
                     <div class="flex items-center gap-4">
                         <div class="bg-light p-3 rounded-xl ipad_min:hidden mobile:hidden"><img src="{% static 'image/Idea.svg' %}" alt=""></div>
