--- a/dashboard/templates/dashboard/patient.html
+++ b/dashboard/templates/dashboard/patient.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %} Rema devi | patients {% endblock %}
+{% block title %} Dr.Rema devi | patients {% endblock %}
 {% block content %}
 
 
