--- a/main/templates/blogs.html
+++ b/main/templates/blogs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Rema devi | Blog {% endblock %}
+{% block title %} Dr.Rema devi | Blog {% endblock %}
 {% block content %}
 
 {% load static %}
@@ -12,7 +12,7 @@
     <div id="slidemenu" class="slidediv py-8 items-center text-center right-0 top-0 fixed h-full bg-black z-[9999999]">
         <div class="bg-black" >
             <div class="my-20">
-                <a href="{% url 'main:index' %}"><h1 class="font-artifika text-3xl text-[2rem] text-baseprimary">Rema Devi</h1></a>
+                <a href="{% url 'main:index' %}"><h1 class="font-artifika text-3xl text-[2rem] text-baseprimary">Dr.Rema Devi</h1></a>
             </div>
             <div>
                 <nav>
