--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %} Rema devi | Dashboard {% endblock %}
+{% block title %} Dr.Rema devi | Dashboard {% endblock %}
 {% block content %}
 
 {% load static %}
