--- a/main/templates/single.html
+++ b/main/templates/single.html
@@ -13,7 +13,7 @@
     <div id="slidemenu" class="slidediv py-8 items-center text-center right-0 top-0 fixed h-full bg-black z-[9999999]">
         <div class="bg-black" >
             <div class="my-20">
-                <a href="{% url 'main:index' %}"><h1 class="font-artifika text-3xl text-[2rem] text-baseprimary">Rema Devi</h1></a>
+                <a href="{% url 'main:index' %}"><h1 class="font-artifika text-3xl text-[2rem] text-baseprimary">Dr.Rema Devi</h1></a>
             </div>
             <div>
                 <nav>
