--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -176,7 +176,7 @@
             <div>
                 <h1 class="font-artifika text-4xl ipad_min:text-xl mobile:text-xl">Dr.Rema Devi A</h1>
                 <h2 class="font-montserrat text-xl my-1 text-gray-600 ipad_min:text-lg mobile:text-lg">Counselling Psychologist</h2>
-                <p style="font-size:13.5px;">M.Sc (Psychology), M.Ed., School Counselling,<br> International Common Wealth P.G. Diploma,<br> M.Sc.Counselling & Family Therapy(IGNOU),<br> M.Phil (Counselling Psychology)</p>
+                <p style="font-size:13.5px;">Ph.D., M.Phil, M.Sc.Counselling &<br>Family Therapy(IGNOU), International <br> Common Wealth P.G. Diploma,M.sc. (Psychology),<br>M.Ed.(Guidance & Counselling),School Counselling</p>
                 <p class="font-montserrat text-lg my-8 ipad_min:text-sm mobile:text-sm">Welcome to New Disha Counselling Centre. With many years of teaching and Counselling in and Outside KERALA, I am here to help people to achieve their personal and professional goals…</p>
                 <p class="font-montserrat text-lg ipad_min:hidden mobile:hidden ">Started this counselling centre at home in 2014, and since then I have been providing professional and compassionate counselling services for individuals, couples, families, and groups. Here we do offer a range of counselling services, including pre-marital counselling, family counselling/therapy, child & adolescent counselling, school counselling, group counselling, awareness programs, motivational sessions, career guidance, teacher  development programmes, and grief therapy.Online consultation is also available. </p>
                 <div class="flex gap-12 my-8">
